<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:gravity="center_vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnEasy"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_singleplayer"
            android:text="@string/easy"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btnMedium"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/btn_singleplayer"
            android:text="@string/medium"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btnImpossible"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/btn_singleplayer"
            android:text="@string/impossible"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btnMixed"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/btn_singleplayer"
            android:text="@string/mixed"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btnMultiPlayer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/btn_multiplayer"
            android:text="@string/multiplayer"
            android:textColor="#FFFFFF"/>
    </LinearLayout>



</RelativeLayout>