<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:id="@+id/layout1"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:background="@color/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <RelativeLayout
            android:id="@+id/rl_score_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/my_border_x"
            android:padding="5dp"
            android:layout_marginRight="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:textSize="27sp"
                android:textColor="@color/orange"
                android:gravity="center"
                android:layout_marginTop="-3dp"
                />
            <TextView
                android:id="@+id/tvX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:hint="0"
                android:textColor="@color/orange"
                android:layout_marginTop="-3dp"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_score_xo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/my_border_xo"
            android:padding="5dp"
            android:layout_marginRight="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xo"
                android:textSize="27sp"
                android:textColor="@color/white"
                android:layout_marginTop="-3dp"
                />

            <TextView
                android:id="@+id/tvDraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-3dp"
                android:gravity="end"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:textSize="27sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_score_o"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/my_border_o"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/O"
                android:textSize="27sp"
                android:textColor="@color/greenLight"
                android:layout_marginTop="-3dp"
                />

            <TextView
                android:id="@+id/tvO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-3dp"
                android:gravity="end"
                android:textColor="@color/greenLight"
                android:layout_alignParentRight="true"
                android:textSize="27sp"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_camp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/llrow1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square1"
                    android:tag="0"
                    >
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square2"
                    android:tag="1"
                    >
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square3"
                    android:tag="2"
                    >
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llrow2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square4"
                    android:tag="3"
                    >
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square5"
                    android:tag="4"
                    >
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square6"
                    android:tag="5"
                    >
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llrow3"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square7"
                    android:tag="6"
                    >
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square8"
                    android:tag="7"
                    >
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/square9"
                    android:tag="8"
                    >
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>